cabal-version:  3.0
name:           haskus-system-examples
version:        0.1.0.0
synopsis:       Examples using haskus-system
description:    Please see the README on Github at <https://github.com/haskus/haskus-system-examples#readme>
category:       System
homepage:       https://github.com/haskus/packages/haskus-system-examples#readme
bug-reports:    https://github.com/haskus/packages/issues
author:         Sylvain HENRY
maintainer:     sylvain@haskus.fr
copyright:      Sylvain HENRY 2024
license:        BSD-3-Clause
build-type:     Simple
extra-source-files:
    README.rst

source-repository head
  type: git
  location: https://github.com/haskus/packages
  subdir: haskus-system-examples

common static-system
  ghc-options: -Wall -O2 -static -threaded
  cc-options: -static
  ld-options: -static -pthread
  extra-lib-dirs:
      -- haskus-system-build copies libgmp.a here:
      ./.system-work/lib
      -- Using a global directory like the following sadly doesn't work:
      -- ~/.haskus/system/build/usr/lib
  default-language: Haskell2010

executable Clock
  import: static-system
  main-is: Main.hs
  hs-source-dirs:
      src/clock
  build-depends:
      JuicyPixels
    , base >=4.8 && <5
    , bytestring
    , containers
    , formatting
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat
    , lens
    , stm
  other-modules:
      Clock.Render
      Paths_haskus_system_examples

executable Demo
  import: static-system
  main-is: Main.hs
  hs-source-dirs:
      src/demo
  build-depends:
      FontyFruity
    , JuicyPixels
    , MonadRandom
    , Rasterific
    , base >=4.8 && <5
    , bytestring
    , colour
    , containers
    , diagrams-lib
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat
    , hsnoise
    , mtl
    , transformers
  other-modules:
      Demo.Diagrams
      Demo.Graphics
      Demo.Art

executable DisplayState
  import: static-system
  main-is: Main.hs
  hs-source-dirs:
      src/display-state
  build-depends:
      base >=4.8 && <5
    , containers
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat
  other-modules:
      Paths_haskus_system_examples

executable HelloWorld
  import: static-system
  main-is: Main.hs
  hs-source-dirs:
      src/helloworld
  build-depends:
      base >=4.8 && <5
    , containers
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat
  other-modules:
      Paths_haskus_system_examples

executable KernelEvent
  import: static-system
  main-is: Main.hs
  hs-source-dirs:
      src/kernel-events
  build-depends:
      base >=4.8 && <5
    , containers
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat
  other-modules:
      Paths_haskus_system_examples

executable ListDevices
  import: static-system
  main-is: Main.hs
  hs-source-dirs:
      src/device-list
  build-depends:
      base >=4.8 && <5
    , containers
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat
  other-modules:
      Paths_haskus_system_examples

executable OpenDevice
  import: static-system
  main-is: Main.hs
  hs-source-dirs:
      src/device-open
  build-depends:
      base >=4.8 && <5
    , containers
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat
  other-modules:
      Paths_haskus_system_examples

executable Sound
  import: static-system
  main-is: Main.hs
  hs-source-dirs:
      src/sound
  build-depends:
      base >=4.8 && <5
    , containers
    , filepath
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat
  other-modules:
      Paths_haskus_system_examples

executable Test
  import: static-system
  main-is: Main.hs
  hs-source-dirs:
      src/test
  build-depends:
      JuicyPixels
    , base >=4.8 && <5
    , bytestring
    , colour
    , containers
    , either
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat
    , stm
    , transformers
  other-modules:
      Paths_haskus_system_examples

executable TutDisplays
  import: static-system
  main-is: TutDisplays.hs
  hs-source-dirs:
      src/tutorial
  build-depends:
      base >=4.8 && <5
    , containers
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat

executable TutEntitiesIDs
  import: static-system
  main-is: TutEntitiesIDs.hs
  hs-source-dirs:
      src/tutorial
  build-depends:
      base >=4.8 && <5
    , containers
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat

executable TutFirstPipeline
  import: static-system
  main-is: TutFirstPipeline.hs
  hs-source-dirs:
      src/tutorial
  build-depends:
      base >=4.8 && <5
    , containers
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat

executable TutFrameSwitch
  import: static-system
  main-is: TutFrameSwitch.hs
  hs-source-dirs:
      src/tutorial
  build-depends:
      base >=4.8 && <5
    , containers
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat

executable TutGenericFrame
  import: static-system
  main-is: TutGenericFrame.hs
  hs-source-dirs:
      src/tutorial
  build-depends:
      base >=4.8 && <5
    , containers
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat

executable TutProperties
  import: static-system
  main-is: TutProperties.hs
  hs-source-dirs:
      src/tutorial
  build-depends:
      base >=4.8 && <5
    , containers
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat

executable TutSingleFrame
  import: static-system
  main-is: TutSingleFrame.hs
  hs-source-dirs:
      src/tutorial
  build-depends:
      base >=4.8 && <5
    , containers
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat

executable TutTetris
  import: static-system
  main-is: TutTetris.hs
  hs-source-dirs:
      src/tutorial
  build-depends:
      JuicyPixels
    , array
    , base >=4.8 && <5
    , clock
    , containers
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat
    , random

executable VDSO
  main-is: Main.hs
  other-modules:
      Paths_haskus_system_examples
  hs-source-dirs:
      src/vdso
  build-depends:
      base >=4.8 && <5
    , containers
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat
    , text
    , vector
  default-language: Haskell2010

executable syscall_bench
  main-is: Main.hs
  other-modules:
      Paths_haskus_system_examples
  hs-source-dirs:
      src/syscall_bench
  build-depends:
      base >=4.8 && <5
    , containers
    , haskus-base
    , haskus-system
    , haskus-ui
    , haskus-utils-compat
  default-language: Haskell2010
