cabal-version:       2.4
name:                haskus-text
version:             1.0
synopsis:            Haskus text
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
homepage:            http://www.haskus.org/
copyright:           Sylvain Henry 2017
category:            System
build-type:          Simple

description:
   Text datatypes and functions. Supports ASCII, Unicode, etc.

extra-source-files:
   src/data/README
   src/data/ucd/**/*.txt

source-repository head
  type: git
  location: git://github.com/haskus/haskus-packages.git

library
  exposed-modules:
    Haskus.Text
    Haskus.Text.ASCII
    Haskus.Text.Unicode
    Haskus.Text.Unicode.CodePoint
    Haskus.Text.Unicode.UCD
    Haskus.Text.Unicode.UCDParser

  other-modules:

  build-depends:       
         base                      >= 4.9 && <5.0
      ,  template-haskell
      ,  haskus-utils-types        >= 1.4
      ,  haskus-utils              >= 1.3
      ,  haskus-binary
      ,  directory
      ,  filepath
      ,  megaparsec

  ghc-options:          -Wall
  default-language:     Haskell2010
  hs-source-dirs:       src/lib

test-suite tests
   type:                exitcode-stdio-1.0
   main-is:             Main.hs
   hs-source-dirs:      src/tests/
   ghc-options:         -Wall -threaded
   default-language:    Haskell2010

   build-depends:    
         base
      ,  doctest
      ,  transformers
