cabal-version: 1.12

name:           haskus-time
version:        0.1
synopsis:       Time manipulation functions
description:    Please see the README on Github at <https://github.com/haskus/packages/#readme>
category:       Time
homepage:       https://github.com/haskus/packages#readme
bug-reports:    https://github.com/haskus/packages/issues
author:         Sylvain HENRY
maintainer:     sylvain@haskus.fr
copyright:      Sylvain HENRY 2019
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/haskus/packages

library
  exposed-modules:
      Haskus.Time.Calendar
  other-modules:
      Paths_haskus_time
  hs-source-dirs:
      src/lib
  ghc-options: -Wall -O
  build-depends:
      base >=4.8 && <5
    , haskus-binary
    , haskus-utils
  default-language: Haskell2010

test-suite main-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_haskus_time
  hs-source-dirs:
      src/tests
  ghc-options: -Wall -O
  build-depends:
      base >=4.8 && <5
    , haskus-binary
    , haskus-utils
  default-language: Haskell2010
