cabal-version: 1.12

name:           haskus-ui
version:        0.1
synopsis:       User interface
description:    Please see the README on Github at <https://github.com/haskus/packages/#readme>
category:       UI
homepage:       https://github.com/haskus/packages#readme
bug-reports:    https://github.com/haskus/packages/issues
author:         Sylvain HENRY
maintainer:     sylvain@haskus.fr
copyright:      Sylvain HENRY 2018
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/haskus/packages

library
  exposed-modules:
      Haskus.UI.World
      Haskus.UI.Object
      Haskus.UI.Object.Plane
      Haskus.UI.Object.Sphere
      Haskus.UI.Object.Colored
      Haskus.UI.Common
      Haskus.UI.Maths.Linear
      Haskus.UI.Renderer
      Haskus.UI.Picture
      Haskus.UI.Color
      Haskus.UI.Ray
      Haskus.UI.RayTracer
      Haskus.UI.Sampler
      Haskus.UI.Canvas
  other-modules:
      Paths_haskus_ui
  hs-source-dirs:
      src/lib
  ghc-options: -Wall -O
  build-depends:
      JuicyPixels
    , async
    , base >=4.8 && <5
    , bytestring
    , colour
    , containers
    , haskus-binary
    , haskus-utils
    , haskus-utils-data
    , haskus-utils-variant
    , linear
    , random-shuffle
    , tf-random
    , transformers
    , vector
  default-language: Haskell2010

executable haskus-ui-test
  main-is: Haskus/UI/Test.hs
  other-modules:
      Paths_haskus_ui
  hs-source-dirs:
      src/apps
  ghc-options: -Wall -O
  build-depends:
      base >=4.8 && <5
    , bytestring
    , containers
    , haskus-binary
    , haskus-ui
    , haskus-utils
    , haskus-utils-data
    , haskus-utils-variant
    , transformers
    , vector
  default-language: Haskell2010
