name:                haskus-utils-compat
version:             1.0
synopsis:            Compatibility modules with other external packages (ByteString, etc.)
license:             BSD3
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
homepage:            http://docs.haskus.org/
copyright:           Sylvain Henry 2019
category:            System
build-type:          Simple
cabal-version:       1.20

description:
   Compatibility modules with other external packages (ByteString, etc.)

source-repository head
  type: git
  location: git://github.com/haskus/packages.git

library
  exposed-modules:
    Haskus.Utils.Embed.ByteString
    Haskus.Utils.Text

  other-modules:

  build-depends:       
         base                      >= 4.9 && < 5
      ,  template-haskell          >= 2.10
      ,  haskus-binary
      ,  haskus-utils-data
      ,  directory
      ,  filepath
      ,  bytestring
      ,  text
      ,  formatting

  ghc-options:          -Wall
  default-language:     Haskell2010
  hs-source-dirs:       src/lib
