cabal-version:       2.4
name:                haskus-utils-compat
version:             1.1
synopsis:            Compatibility modules with other external packages (ByteString, etc.)
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
homepage:            http://docs.haskus.org/
copyright:           Sylvain Henry 2024
category:            System
build-type:          Simple

description:
   Compatibility modules with other external packages (ByteString, etc.)

source-repository head
  type: git
  location: https://github.com/haskus/packages
  subdir: haskus-utils-compat

library
  exposed-modules:
    Haskus.Utils.Embed.ByteString
    Haskus.Utils.Text

  other-modules:

  build-depends:       
         base                      >= 4.9 && < 5
      ,  template-haskell          >= 2.10
      ,  haskus-binary
      ,  haskus-utils-data
      ,  haskus-utils
      ,  directory
      ,  filepath
      ,  bytestring
      ,  text
      ,  formatting

  ghc-options:          -Wall
  default-language:     Haskell2010
  hs-source-dirs:       src/lib
