name:                haskus-utils-data
version:             1.0
synopsis:            Haskus utility modules
license:             BSD3
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
homepage:            http://www.haskus.org
copyright:           Sylvain Henry 2018
category:            System
build-type:          Simple
cabal-version:       >=1.20

description:
   Haskus data utility modules

source-repository head
  type: git
  location: git://github.com/haskus/haskus-utils.git

library
  exposed-modules:
    Haskus.Utils.Monad
    Haskus.Utils.HList
    Haskus.Utils.Functor
    Haskus.Utils.List
    Haskus.Utils.Map
    Haskus.Utils.Map.Strict
    Haskus.Utils.Maybe
    Haskus.Utils.Tuple

  other-modules:

  build-depends:       
      base                      >= 4.9
   ,  haskus-utils-types
   ,  extra                     >= 1.4
   ,  recursion-schemes         >= 5.0
   ,  containers                >= 0.5
   ,  mtl                       >= 2.2
   ,  transformers              >= 0.4

  build-tools: 
  ghc-options:          -Wall
  default-language:     Haskell2010
  hs-source-dirs:       src/lib
