cabal-version:       2.4
name:                haskus-utils-types
version:             1.6
synopsis:            Haskus types utility modules
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
homepage:            https://www.haskus.org
copyright:           Sylvain Henry 2024
category:            Type
build-type:          Simple

description:
   Haskus types utility modules (Nat, List, etc.)

source-repository head
  type: git
  location: git://github.com/haskus/packages.git
  subdir: haskus-utils-types

library
  exposed-modules:
    Haskus.Utils.Types
    Haskus.Utils.Types.Bool
    Haskus.Utils.Types.List
    Haskus.Utils.Types.Generics
    Haskus.Utils.Types.Proxy
    Haskus.Utils.Types.Nat
    Haskus.Utils.Types.Symbol
    Haskus.Utils.Types.Error
    Haskus.Utils.Types.Constraint

  other-modules:

  build-depends:       
         base >= 4.11 && < 5

  ghc-options:          -Wall
  default-language:     Haskell2010
  hs-source-dirs:       src/lib

test-suite tests
   type:                exitcode-stdio-1.0
   main-is:             Main.hs
   hs-source-dirs:      src/tests
   ghc-options:         -Wall -threaded
   default-language:    Haskell2010

   build-depends:
         base >= 4.11 && < 5
      ,  doctest >= 0.16
