name:                haskus-utils-variant
version:             2.4
synopsis:            Variant and EADT
license:             BSD3
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
homepage:            http://www.haskus.org
copyright:           Sylvain Henry 2018
category:            System
build-type:          Simple
cabal-version:       1.20

description:
   Variant (extensible sum type) and EADT (extensible recursive sum type)
   datatypes. Documentation can be found at https://docs.haskus.org

source-repository head
  type: git
  location: git://github.com/haskus/haskus-utils.git

library
  exposed-modules:
    Haskus.Utils.ContFlow
    Haskus.Utils.Variant
    Haskus.Utils.Variant.OldFlow
    Haskus.Utils.Variant.Flow
    Haskus.Utils.Variant.Cont
    Haskus.Utils.Variant.Syntax
    Haskus.Utils.VariantF
    Haskus.Utils.EADT
    Haskus.Utils.EADT.TH

  other-modules:

  build-depends:       
      base                      >= 4.9 && < 5.0
   ,  transformers
   ,  deepseq
   ,  exceptions                >= 0.9
   ,  template-haskell
   ,  haskus-utils-types        >= 1.3
   ,  haskus-utils-data

  build-tools: 
  ghc-options:          -Wall
  default-language:     Haskell2010
  hs-source-dirs:       src/lib

test-suite tests
   type:                exitcode-stdio-1.0
   main-is:             Main.hs
   hs-source-dirs:      src/tests
   ghc-options:         -Wall -threaded
   default-language:    Haskell2010
   other-modules:
         Variant
      ,  EADT

   build-depends:
         base
      ,  haskus-utils-variant
      ,  tasty                   >= 0.11
      ,  tasty-quickcheck        >= 0.8
      ,  doctest                 >= 0.16

benchmark bench
   type:                exitcode-stdio-1.0
   main-is:             Main.hs
   hs-source-dirs:      src/bench
   ghc-options:         -Wall -threaded -O
   default-language:    Haskell2010
   build-depends:
         base
      ,  haskus-utils-variant
      ,  criterion
      ,  QuickCheck
      ,  deepseq
