cabal-version:       2.4
name:                haskus-utils-variant
version:             3.5
synopsis:            Variant and EADT
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
homepage:            https://www.haskus.org
copyright:           Sylvain Henry 2020
category:            System
build-type:          Simple

description:
   Variant (extensible sum type) and EADT (extensible recursive sum type)
   datatypes. Documentation can be found at https://docs.haskus.org

source-repository head
  type: git
  location: git://github.com/haskus/packages.git
  subdir: haskus-utils-variant

flag unliftio
  Description: Enable MonadUnliftIO instance
  Manual: True
  Default: True

library
  exposed-modules:
    Haskus.Utils.ContFlow
    Haskus.Utils.Variant
    Haskus.Utils.Variant.VEither
    Haskus.Utils.Variant.Excepts
    Haskus.Utils.Variant.Syntax
    Haskus.Utils.VariantF
    Haskus.Utils.EADT
    Haskus.Utils.EADT.TH
    Haskus.Utils.EGADT

  other-modules:

  build-depends:       
      base                      >= 4.9 && < 5.0
   ,  transformers
   ,  deepseq
   ,  exceptions                >= 0.9
   ,  template-haskell
   ,  haskus-utils-types        >= 1.5
   ,  haskus-utils-data         >= 1.2
   ,  mtl                       >= 2.2

  if flag(unliftio)
    build-depends: unliftio-core >= 0.2
    cpp-options: -DENABLE_UNLIFTIO

  ghc-options:          -Wall
  default-language:     Haskell2010
  hs-source-dirs:       src/lib

test-suite tests
   type:                exitcode-stdio-1.0
   main-is:             Main.hs
   hs-source-dirs:      src/tests
   ghc-options:         -Wall -threaded
   default-language:    Haskell2010
   other-modules:
         Variant
      ,  EADT

   build-depends:
         base                    >= 4.9 && < 5.0
      ,  haskus-utils-variant
      ,  haskus-utils-types
      ,  haskus-utils-data
      ,  tasty                   >= 0.11
      ,  tasty-quickcheck        >= 0.8
      ,  doctest                 >= 0.16

benchmark bench
   type:                exitcode-stdio-1.0
   main-is:             Main.hs
   hs-source-dirs:      src/bench
   ghc-options:         -Wall -threaded
   default-language:    Haskell2010
   build-depends:
         base                    >= 4.9 && < 5.0
      ,  haskus-utils-variant
      ,  criterion
      ,  QuickCheck
      ,  deepseq
