name:                haskus-utils
version:             0.9.0.0
synopsis:            Haskus utility modules
license:             BSD3
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
homepage:            http://www.haskus.org/system
copyright:           Sylvain Henry 2018
category:            System
build-type:          Simple
cabal-version:       >=1.20

description:
   Various utility modules used by Haskus packages.

extra-source-files:
   CHANGES

source-repository head
  type: git
  location: git://github.com/haskus/haskus-utils.git

library
  exposed-modules:
    Haskus.Utils.Solver
    Haskus.Utils.Parser
    Haskus.Utils.HArray
    Haskus.Utils.MultiState
    Haskus.Utils.Embed
    Haskus.Utils.Flow
    Haskus.Utils.STM
    Haskus.Utils.STM.TEq
    Haskus.Utils.STM.TMap
    Haskus.Utils.STM.TSet
    Haskus.Utils.STM.TList
    Haskus.Utils.STM.TTree
    Haskus.Utils.STM.Future
    Haskus.Utils.STM.TGraph

  reexported-modules:
    -- haskus-utils-types
      Haskus.Utils.Types
    , Haskus.Utils.Types.Generics
    , Haskus.Utils.Types.List
    -- haskus-utils-data
    , Haskus.Utils.Monad
    , Haskus.Utils.HList
    , Haskus.Utils.Functor
    , Haskus.Utils.List
    , Haskus.Utils.Map
    , Haskus.Utils.Map.Strict
    , Haskus.Utils.Maybe
    , Haskus.Utils.Tuple
    -- haskus-utils-variant
    , Haskus.Utils.ContFlow
    , Haskus.Utils.Variant
    , Haskus.Utils.Variant.Flow
    , Haskus.Utils.Variant.Cont
    , Haskus.Utils.EADT

  other-modules:

  build-depends:       
         base                      >= 4.9
      ,  haskus-utils-types
      ,  haskus-utils-data
      ,  haskus-utils-variant
      ,  containers                >= 0.5
      ,  list-t                    >= 0.4
      ,  stm                       >= 2.4
      ,  stm-containers            >= 0.2
      ,  vector                    >= 0.11
      ,  transformers              >= 0.4
      ,  mtl                       >= 2.2
      ,  template-haskell          >= 2.10
      ,  file-embed                >= 0.0.10
      ,  extra                     >= 1.4
      ,  recursion-schemes         >= 5.0

  build-tools: 
  ghc-options:          -Wall
  default-language:     Haskell2010
  hs-source-dirs:       src/lib

test-suite tests
   type:                exitcode-stdio-1.0
   main-is:             Main.hs
   hs-source-dirs:      src/tests
   ghc-options:         -Wall -threaded
   default-language:    Haskell2010
   other-modules:
         Haskus.Tests.Utils
      ,  Haskus.Tests.Utils.HArray
      ,  Haskus.Tests.Utils.Variant
      ,  Haskus.Tests.Utils.Solver

   build-depends:    
         base
      ,  haskus-utils
      ,  tasty                   >= 0.11
      ,  tasty-quickcheck        >= 0.8
