name:                haskus-utils
version:             1.4
synopsis:            Haskus utility modules
license:             BSD3
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
homepage:            http://docs.haskus.org/
copyright:           Sylvain Henry 2018
category:            System
build-type:          Simple
cabal-version:       1.20

description:
   Haskus utility modules.

source-repository head
  type: git
  location: git://github.com/haskus/haskus-utils.git

library
  exposed-modules:
    Haskus.Utils.Solver
    Haskus.Utils.Parser
    Haskus.Utils.HArray
    Haskus.Utils.MultiState
    Haskus.Utils.Embed
    Haskus.Utils.Flow
    Haskus.Utils.STM
    Haskus.Utils.STM.TEq
    Haskus.Utils.STM.TMap
    Haskus.Utils.STM.TSet
    Haskus.Utils.STM.TList
    Haskus.Utils.STM.TTree
    Haskus.Utils.STM.Future
    Haskus.Utils.STM.TGraph

  other-modules:

  build-depends:       
         base                      >= 4.9 && < 5
      ,  haskus-utils-types        >= 1.3
      ,  haskus-utils-data
      ,  haskus-utils-variant      >= 2.4
      ,  containers                >= 0.5
      ,  list-t                    >= 0.4
      ,  stm                       >= 2.4
      ,  stm-containers            >= 1.1
      ,  vector                    >= 0.11
      ,  transformers              >= 0.4
      ,  mtl                       >= 2.2
      ,  template-haskell          >= 2.10
      ,  extra                     >= 1.4
      ,  hashable                  >= 1.2

  build-tools: 
  ghc-options:          -Wall
  default-language:     Haskell2010
  hs-source-dirs:       src/lib

test-suite tests
   type:                exitcode-stdio-1.0
   main-is:             Main.hs
   hs-source-dirs:      src/tests
   ghc-options:         -Wall -threaded
   default-language:    Haskell2010
   other-modules:
         Haskus.Tests.Utils
      ,  Haskus.Tests.Utils.HArray
      ,  Haskus.Tests.Utils.Solver

   build-depends:    
         base
      ,  haskus-utils
      ,  tasty                   >= 0.11
      ,  tasty-quickcheck        >= 0.8
      ,  doctest
