cabal-version:       2.4
name:                haskus-web
version:             1.1
synopsis:            Haskus web
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
homepage:            http://www.haskus.org
copyright:           Sylvain Henry 2019
category:            System
build-type:          Simple

description:
   Haskus web related modules

extra-source-files:
   src/scripts/**/*.js
   src/css/**/*.css

source-repository head
  type: git
  location: git://github.com/haskus/packages.git
  subdir: haskus-web

library
  exposed-modules:
    Haskus.Web.Css
    Haskus.Web.Html
    Haskus.Web.Response
    Haskus.Web.JQuery
    Haskus.Web.Files
    Haskus.Web.Page
    Haskus.Web.Server

  other-modules:

  build-depends:       
      base                      >= 4.9 && < 5
   ,  haskus-utils
   ,  haskus-utils-compat
   ,  bytestring
   ,  text
   ,  clay
   ,  lucid
   ,  containers
   ,  wai
   ,  warp
   ,  warp-tls
   ,  http-types


  ghc-options:          -Wall
  default-language:     Haskell2010
  hs-source-dirs:       src/lib
